# PluginConfiguratorApp

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CI_FIXES.md  FINAL_SETUP_SUMMARY.md  GANTT_CHART.md  LICENSE  MANIFEST.in  PLAN.md  PROGRESS.md  PROJECT_SETUP_SUMMARY.md  README.md  UI Wireframme.bmpr  UI_REVAMP_PLAN.md  add_to_project.py  assign_milestones.py  create_issues.py  create_milestones.py  create_tasks.py  migrate_to_org.py  populate_project.py  pyproject.toml  requirements.txt  ruff.toml  run.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.toml  epic.toml  feature_task.toml
.github/workflows/: ci.yml  pr-checks.yml  update-status.yml
.old/: requirements.txt
.old/src/: style.qss
.old/templates/: README.md
direktdsp-configurator/: Cargo.toml
direktdsp-configurator/resources/: modules.toml
direktdsp-configurator/resources/presets/: instrument.toml  minimal.toml  standard_fx.toml
direktdsp-configurator/src/: app.rs  main.rs
direktdsp-configurator/src/config/: mod.rs  module_registry.rs  preset.rs  project_config.rs
direktdsp-configurator/src/generation/: cmake_configurator.rs  generator.rs  git_ops.rs  mod.rs  toml_writer.rs
direktdsp-configurator/src/ui/: mod.rs
direktdsp-configurator/src/ui/screens/: build_options.rs  formats.rs  generate.rs  mod.rs  modules.rs  multi_plugin.rs  project_info.rs  review.rs  welcome.rs
direktdsp-configurator/src/ui/widgets/: mod.rs
direktdsp-configurator/src/validation/: mod.rs
docs/: CI_PIPELINE.md  UI Wireframe.bmpr  architecture.md  implementation.md  overview.md  presets.md  ui.md
docs/diagrams/: Component.md  State.md  SystemDeployment.md  WorkflowSequence.md
old/: Default.xml
old/src/: functions.py  main.py
old/templates/: gitignore.txt
src/: functions.py  main.py  style.qss  styles.py
src/core/: __init__.py  base_tab.py  config_manager.py  gui_components.py  preset_validator.py  project_worker.py  utils.py  validators.py
src/resources/: preset_schema.xsd  style.qss
src/ui/: __init__.py  main_window.py  options_panel.py  preset_panel.py  progress_panel.py  (+1 more)
templates/: CMakeLists.txt.template  README.md.template  gitignore.template  gitignore.txt  workflow.txt
tests/: conftest.py  test_base_tab.py  test_config_manager.py  test_configuration_tab.py  test_configure_tab.py  test_define_tab.py  test_file_tree_preview.py  test_generate_tab.py  test_implement_tab.py  test_main_window.py  test_preset_load_dialog.py  test_preset_management_dialog.py  test_preset_validator.py  test_project_info_tab.py  test_project_worker.py  test_save_preset_dialog.py  test_success_dialog.py  test_validation_footer.py  test_validators.py
(+28 files in other folders)
