[project]
name = "pluginconfiguratorapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "pyside6==6.8.3",
    "pyside6-addons==6.8.3",
    "pyside6-essentials==6.8.3",
    "requests==2.32.3",
    "shiboken6==6.8.3",
    "urllib3==2.3.0",
    "uuid==1.30",
]
