[project]
name = "pluginconfiguratorapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "pyside6==6.8.3",
    "pyside6-addons==6.8.3",
    "pyside6-essentials==6.8.3",
    "requests==2.32.3",
    "shiboken6==6.8.3",
    "urllib3==2.3.0",
    "uuid==1.30",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.6",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["core", "ui", "resources"]
skip_gitignore = true
skip = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
