[package]
name = "direktdsp-configurator"
version = "0.1.0"
edition = "2024"
description = "TUI configurator for DirektDSP plugin projects"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
directories = "6"
semver = "1"
regex = "1"
petgraph = "0.7"
chrono = { version = "0.4", features = ["serde"] }
